Fixing an issue with the z-index

--- a/app/css/gsa.scss
+++ b/app/css/gsa.scss
@@ -443,6 +443,7 @@ footer {
     height: 44px;
     padding: 5px;
     position: relative;
+    z-index: 1;
     
     * {
         color: #fff;
